--- a/build.gradle
+++ b/build.gradle
@@ -5,29 +5,16 @@ plugins {
 
 version = project.mod_version
 group = project.maven_group
-
-base {
-    archivesName = project.archives_base_name
-}
+archivesBaseName = 'buffmobs' //
 
 repositories {
-    // Add repositories here if needed
-}
-
-loom {
-    splitEnvironmentSourceSets()
-
-    mods {
-        "buffmobs" {
-            sourceSet sourceSets.main
-            sourceSet sourceSets.client
-        }
+    maven {
+        name = "Shedaniel Maven"
+        url = "https://maven.shedaniel.me/"
     }
-}
-
-fabricApi {
-    configureDataGeneration {
-        client = false
+    maven {
+        name = "TerraformersMC Maven"
+        url = "https://maven.terraformersmc.com/releases/"
     }
 }
 
@@ -36,11 +23,18 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    modApi("me.shedaniel.cloth:cloth-config-fabric:15.0.127") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    modImplementation("com.terraformersmc:modmenu:11.0.1") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
 }
 
 processResources {
     inputs.property "version", project.version
-
     filesMatching("fabric.mod.json") {
         expand "version": project.version
     }
@@ -58,6 +52,16 @@ java {
 
 jar {
     from("LICENSE") {
-        rename { "${it}_${project.archives_base_name}"}
+        rename { "${it}_${project.base.archivesName.get()}"}
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
     }
 }
